--- a/login.html
+++ b/login.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
-<html lang="sk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prihlásenie</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="uvod.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .login-container {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        .login-container h2 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .login-container button {
+            width: 100%;
+            padding: 10px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .login-container button:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>SO Air Quality sprint app</h1>
-
-    <div class="container">
-        <div class="form-container">
-            <h2>Prihlásenie</h2>
-            <form action="index.html" method="GET">
-                <label for="nickname">E-mail</label>
-                <input type="text" id="nickname" name="nickname" required>
-
-                <label for="password">Heslo</label>
-                <input type="password" id="password" name="password" required>
-
-                <div class="checkbox-group">
-                    <input type="checkbox" id="remember" name="remember">
-                    <label for="remember">Zapamätať</label>
-                </div>
-                
-                <div class="checkbox-group">
-                    <input type="checkbox" id="terms" name="terms" required>
-                    <label for="terms">Nie som robot</label>
-                </div>
-                
-                <button type="submit">Prihlásiť</button>
-            </form>
-        </div>
-        <div class="image-container">
-            <img src="images/runner.jpg" alt="Running person">
-        </div>
+    <div class="login-container">
+        <h2>Prihlásenie</h2>
+        <form action="backend/login.php" method="POST">
+            <input type="text" name="username" placeholder="Používateľské meno" required>
+            <input type="password" name="password" placeholder="Heslo" required>
+            <button type="submit">Prihlásiť</button>
+        </form>
     </div>
 </body>
 </html>
