--- a/registration.html
+++ b/registration.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
-<html lang="sk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrácia</title>
-    <link rel="stylesheet" href="registration.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .registration-container {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        .registration-container h2 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .registration-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .registration-container button {
+            width: 100%;
+            padding: 10px;
+            background: #28a745;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .registration-container button:hover {
+            background: #218838;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>SO Air Quality Sprint App</h1>
-    </header>
-
-    <div class="container">
-        <div class="form-container">
-            <h2>Registrácia</h2>
-            <form action="index.html" method="POST">
-                <label for="first-name">Meno</label>
-                <input type="text" id="first-name" name="first-name" placeholder="Zadajte meno" required>
-
-                <label for="last-name">Priezvisko</label>
-                <input type="text" id="last-name" name="last-name" placeholder="Zadajte priezvisko" required>
-
-                <label for="E-mail">E-mail</label>
-                <input type="text" id="E-mail" name="E-mail" placeholder="Zadajte E-mail" required>
-
-                <label for="telefon">Telefón</label>
-                <input type="text" id="telefon" name="telefon" placeholder="Zadajte telefónne číslo" required>
-
-                <label for="password">Heslo</label>
-                <input type="password" id="password" name="password" placeholder="Zadajte heslo" required>
-
-                <div class="checkbox-group">
-                    <input type="checkbox" id="terms" name="terms" required>
-                    <label for="terms">Súhlasím s obchodnými podmienkami</label>
-                </div>
-
-                <button type="submit">Registrovať</button>
-            </form>
-        </div>
+    <div class="registration-container">
+        <h2>Registrácia</h2>
+        <form action="backend/register.php" method="POST">
+            <input type="text" name="username" placeholder="Používateľské meno" required>
+            <input type="password" name="password" placeholder="Heslo" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <button type="submit">Registrovať</button>
+        </form>
     </div>
 </body>
 </html>
