--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
                 <div class="city-card" data-city="Kosice">
                     <img src="images/kosice.jpg" alt="Košice">
                     <div class="city-name">KOŠICE</div>
-                    <div class="city-info">TEPLOTA: <span id="temperature-kosice" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-kosice" class="highlight-temperature">Nahráva sa...</span></div>
+                    <div class="city-info">TEPLOTA: <span id="temperature-kosice" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-kosice">Nahráva sa...</span></div>
                     <a href="mapa_kosice.html" class="detail-button">DETAILNÁ MAPA</a>
 
                     <div class="iframe-container">
@@ -78,7 +78,7 @@
                 <div class="city-card" data-city="Presov">
                     <img src="images/presov.jpg" alt="Prešov">
                     <div class="city-name">PREŠOV</div>
-                    <div class="city-info">TEPLOTA: <span id="temperature-presov" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-presov" class="highlight-temperature">Nahráva sa...</span></div>
+                    <div class="city-info">TEPLOTA: <span id="temperature-presov" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-presov">Nahráva sa...</span></div>
                     <a href="mapa_presov.html" class="detail-button">DETAILNÁ MAPA</a>
 
                     <div class="iframe-container">
@@ -89,7 +89,7 @@
                 <div class="city-card" data-city="Batizovce">
                     <img src="images/batizovce.jpg" alt="Batizovce">
                     <div class="city-name">BATIZOVCE</div>
-                    <div class="city-info">TEPLOTA: <span id="temperature-batizovce" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-batizovce" class="highlight-temperature">Nahráva sa...</span></div>
+                    <div class="city-info">TEPLOTA: <span id="temperature-batizovce" class="highlight-temperature">Nahráva sa...</span><br>PRIEMERNÁ PM2.5: <span id="pm25-batizovce">Nahráva sa...</span></div>
                     <a href="mapa_batizovce.html" class="detail-button">DETAILNÁ MAPA</a>
 
                     <div class="iframe-container">
