--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SO Air Quality Sprint App</title>
-    <link rel="stylesheet" href="uvod.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
-<body>
-    <header>
-        <h1>SO Air Quality sprint app</h1>
-        <nav>
-            <a href="index.html" class="login-button1">Úvod</a>
-            <a href="pocasie.html" class="login-button1">Počasie</a>
-            <a href="mapa.html" class="login-button1">Mapa</a>
-            <a href="profil.html" class="login-button1">Profil</a>
+<body class="index-page">
+    <header class="map-page">
+        <h1 class="header-title">SO Air Quality Sprint App</h1>
+        <nav class="navbar map-page">
+            <a href="index.html" class="nav-link">Úvod</a>
+            <a href="pocasie.html" class="nav-link">Počasie</a>
+            <a href="mapa.html" class="nav-link">Mapa</a>
+            <a href="profil.html" class="nav-link">Profil</a>
+            <a href="login.html" class="nav-link login-button">Login</a>
         </nav>
     </header>
     <main>
-        <div class="intro-container">
+        <section class="intro-container index-page">
             <div class="text-content">
-                <h2>Čistejší vzduch pri behaní?<br>Vyber si SO Air Quality sprint app</h2>
-                <p>Predstav si appku, ktorá ťa pri behu naviguje trasou s najčistejším vzduchom. Sleduje kvalitu ovzdušia v tvojom okolí a podľa toho ti navrhne najzdravšiu trasu. Vyhneš sa oblastiam so smogom či prachom a môžeš behať v prostredí, ktoré chráni tvoje pľúca. Tento prístup podporuje tvoju kondíciu a zároveň sa stará o tvoje zdravie - ideálny spoločník pre každého, kto myslí na čistý vzduch pri športe.</p>
+                <h2>Čistejší vzduch pri behaní?<br>Vyber si SO Air Quality Sprint App</h2>
+                <p>
+                    Predstav si appku, ktorá ťa pri behu naviguje trasou s najčistejším vzduchom.
+                    Sleduje kvalitu ovzdušia v tvojom okolí a podľa toho ti navrhne najzdravšiu trasu.
+                    Vyhneš sa oblastiam so smogom či prachom a môžeš behať v prostredí, ktoré chráni tvoje pľúca.
+                    Tento prístup podporuje tvoju kondíciu a zároveň sa stará o tvoje zdravie - ideálny spoločník
+                    pre každého, kto myslí na čistý vzduch pri športe.
+                </p>
             </div>
             <div class="image-content">
-                <img src="images/runner2.jpg" alt="Running person">
+                <img src="images/runner2.jpg" alt="Running person" class="intro-image">
             </div>
-        </div>
     </main>
+    <footer class="index-page footer">
+        <p>&copy; 2024 SO Air Quality Sprint App. Všetky práva vyhradené.</p>
+    </footer>
 </body>
 </html>
