--- a/pocasie.html
+++ b/pocasie.html
@@ -107,5 +107,8 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <p>&copy; 2024 SO Air Quality Sprint App. Všetky práva vyhradené.</p>
+    </footer>
 </body>
 </html>
