--- a/mapa.html
+++ b/mapa.html
@@ -14,7 +14,7 @@
             <a href="pocasie.html" class="nav-link">Počasie</a>
             <a href="mapa.html" class="nav-link active">Mapa</a>
             <a href="profil.html" class="nav-link">Profil</a>
-            <a href="login.html" class="nav-link login-button">Login</a>
+            <a href="login.php" class="nav-link login-button">Login</a>
         </nav>
     </header>
     <main class="main-container">
