--- a/profil.html
+++ b/profil.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil používateľa</title>
-    <link rel="stylesheet" href="profil.css">
+    <link rel="stylesheet" href="styles/profil.css">
 </head>
-<body>
+<body class="map-page">
+    <header class="map-page">
+        <h1 class="header-title">SO Air Quality Sprint App</h1>
+        <nav class="navbar map-page">
+            <a href="index.html" class="nav-link">Úvod</a>
+            <a href="pocasie.html" class="nav-link">Počasie</a>
+            <a href="mapa.html" class="nav-link">Mapa</a>
+            <a href="profil.html" class="nav-link active">Profil</a>
+            <a href="login.php" class="nav-link login-button">Login</a>
+        </nav>
+    </header>
 
-<div class="header">
-    <h1>Profil</h1>
-    <nav>
-        <a href="index.html">Domov</a>
-        <a href="pocasie.html">Počasie</a>
-        <a href="aktivita.html">Aktivita</a>
-        <a href="profil.html">Profil</a>
-    </nav>
-</div>
+    <main>
+        <div class="profile-container">
+            <img src="images/avatar.jpg" alt="Profilová fotka" class="profile-photo">
+            <div class="profile-info">
+                <p><strong>Meno:</strong> Ján</p>
+                <p><strong>Priezvisko:</strong> Novák</p>
+                <p><strong>Email:</strong> jan.novak@example.com</p>
+                <p><strong>Telefón:</strong> +421 123 456 789</p>
+                <p><strong>Posledná aktivita:</strong> 18.11.2024</p>
+            </div>
+        </div>
+    </main>
 
-<div class="profile-container">
-    <img src="images/avatar.jpg" alt="Profilová fotka" class="profile-photo">
-    <div class="profile-info">
-        <p><strong>Meno:</strong> Ján</p>
-        <p><strong>Priezvisko:</strong> Novák</p>
-        <p><strong>Email:</strong> jan.novak@example.com</p>
-        <p><strong>Telefón:</strong> +421 123 456 789</p>
-        <p><strong>Posledná aktivita:</strong> 18.11.2024</p>
-    </div>
-</div>
-
+    <footer class="map-page">
+        <p>&copy; 2024 SO Air Quality Sprint App. Všetky práva vyhradené.</p>
+    </footer>
 </body>
 </html>
