--- a/profil.html
+++ b/profil.html
@@ -10,7 +10,7 @@
     <header class="map-page">
         <h1 class="header-title">SO Air Quality Sprint App</h1>
         <nav class="navbar map-page">
-            <a href="index.html" class="nav-link">Úvod</a>
+            <a href="index.php" class="nav-link">Úvod</a>
             <a href="pocasie.html" class="nav-link">Počasie</a>
             <a href="mapa.html" class="nav-link">Mapa</a>
             <a href="profil.html" class="nav-link active">Profil</a>
